# AuthentiSight_Fitness

./: .gitignore  README.md  build.gradle  resolveDependencies.sh  settings.gradle
Generate_models/: GenerateDLC.ipynb
Tools/qairt_docker/: dockerfile  run_qairt_docker.sh  setup_env.sh
app/: build.gradle  proguard-rules.pro
app/libs/: .gitkeep
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.txt
app/src/main/assets/avatars/: README.txt
app/src/main/cpp/: CMakeLists.txt  inference.cpp  inference_helper.cpp  inference_helper.h  snpe_helper.cpp  snpe_helper.h
app/src/main/java/com/fitness/snapapp/: FitnessApplication.kt  MainActivity.kt
app/src/main/java/com/fitness/snapapp/ai/avatar/: AvatarRenderer.kt
app/src/main/java/com/fitness/snapapp/ai/camera/: CameraManager.kt
app/src/main/java/com/fitness/snapapp/ai/counter/: ExerciseCounter.kt
app/src/main/java/com/fitness/snapapp/ai/pose/: PoseExtractor.kt
app/src/main/java/com/fitness/snapapp/ai/posture/: PostureDetector.kt
app/src/main/java/com/fitness/snapapp/ai/qairt/: SNPEHelper.kt
app/src/main/java/com/fitness/snapapp/ai/yolo/: YoloNasDetector.kt
app/src/main/java/com/fitness/snapapp/core/constants/: AppConstants.kt
app/src/main/java/com/fitness/snapapp/core/threading/: AppDispatchers.kt
app/src/main/java/com/fitness/snapapp/core/utils/: CalorieCalculator.kt  PermissionUtils.kt
app/src/main/jniLibs/arm64-v8a/: .gitkeep
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/raw/: README.txt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+37 files in other folders)
